<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Rubbish Talk</string>

    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="cancel">Cancel</string>
    <string name="got">Got it</string>
    <string name="nogot">Remind me later</string>
    <string name="reqper">Request permission</string>

    <string name="tv_select_game">Select a game to play:</string>
    <string name="tv_add_new_game">(add new game…)</string>
    <string name="tv_name_new_game">New Game</string>
    <string name="tv_delete_game">Delete this game?</string>
    <string name="tv_game_setting">Game Settings</string>
    <string name="tv_game_help">Help</string>

    <string name="tv_option_name">Game name:</string>
    <string name="tv_option_dir">Path for the media files:</string>
    <string name="tv_option_dir_browse">Tap to Browse…</string>
    <string name="tv_option_textspeed">Text display time (milliseconds per character >= 100):</string>
    <string name="tv_option_imagespeed">Image display time (milliseconds, 0 to disable auto change):</string>

    <string name="merr_gamename_existing">Existing game name: %1$s</string>
    <string name="merr_gamename_invalid">Invalid game name: %1$s</string>
    <string name="merr_permission_denied">User mannually denied the request for permission %1$s. The App can not continue. Please restart the App.</string>
    <string name="merr_storagefailed">File access denied for unknown reason. Sorry, the developer is too stupid to provide a solution or further information.</string>
    <string name="merr_nopermission_read">This App needs the read-storage permission (READ_EXTERNAL_STORAGE) to display media. You can grant the permission manually, or make the App try to request for it.</string>
    <string name="merr_nopermission_write">This App needs the write-storage permission (WRITE_EXTERNAL_STORAGE) to save the data of scripts. You can grant the permission manually, or make the App try to request for it.\nThis is optional. The App will not save data between each launches if not granted this permission.</string>
    <string name="merr_nopermission_manage">You device may be running Android 11 or higher. A further manage-storage permission (MANAGE_EXTERNAL_STORAGE) is needed to access the storage. You can grant the permission manually, or make the App try to request for it.</string>
    <string name="merr_nomedia">No media file is loaded.\nTap the up-right corner to open the Option menu. You can either specify a new media folder there, or put some media files in the current media folder and then restart the app.</string>
    <string name="merr_fileaccess">Can not read file "%1$s", access denied.</string>
    <string name="merr_sessionend">Session ended.</string>
    <string name="merr_badpath">The specified path is inaccessible.</string>
    <string name="merr_pathchanged">The media path is changed. It will come to effect after restarting the app.</string>
    <string name="merr_badimg">Unsupported image: %1$s</string>
    <string name="merr_badmemory">Script memory corrupted.</string>
    <string name="merr_badscript">%1$s%2$s\n\t in line %3$d of %4$s.</string>
    <string name="merr_badscript_syntax">Invalid syntax</string>
    <string name="merr_badscript_bracket">Unbalanced bracket</string>
    <string name="merr_badscript_name">Undefined name</string>
    <string name="merr_badscript_rvalue">Assigning to a Rvalue</string>
    <string name="merr_badscript_type">Type error: %1$s is not %2$s</string>
    <string name="merr_player">Media player failed on %1$s: %2$s.</string>
    <string name="merr_player_io">Can not read file</string>
    <string name="merr_player_malformed">Media file is corrupted</string>
    <string name="merr_player_unsupported">Unsupported format</string>
    <string name="merr_player_timedout">Media file timed out</string>
    <string name="merr_playersrc_io">Cannot read file, nonexistent, corrupted or unsupported</string>
    <string name="merr_playersrc_security">Access denied</string>

    <string name="article_welcome">
        "Thank you for using Rubbish Talk, developed by Equinus. This app displays a slideshow with some text.
        To make it run, you need to grant it the permission to access files on your storage, and put the media files (image, video or audio) and text scripts you want it to display in the specified path.
        Tap up-right corner of the screen to open Settings or see Help for explanation of other features."
    </string>
    <string name="article_help" tools:ignore="MissingTranslation,Typos">
"Media
    Rubbish Talk will choose a file (image, video or audio) in the media files directory to display. Images are displayed with a fixed time interval adjustable in Settings. Audios and videos are played at full length. By default the next media to display will be randomly chosen. However, if plural media files have names in the format of “XXX_01”, “XXX_02”, where "XXX" are the same string, they will be recognized as a sequence, and will always be displayed subsequently and in order.

Script
    Rubbish Talk can run without scripts. If scripts are to be used. A file with the name “script.txt” should be put into the media files path. Basically, the lines from the script will be displayed in order, with an time interval that varies depending on the line length and is also adjustable in Settings.
    Semicolons and indentation, whitespace characters at the beginning of a line, can be used to modify how lines are displayed. To illustrate this rule, in the following example script:

:I slept.
:I played football.
    :I got injured.
    I was hospitalized.
    :I won the game.
:I played cards.

    The script will at first have equal chances of displaying “I slept.”“I played football.” or “I played cards.”. If it chooses “I played football.”, the next line will have equal chances of being “I got injured.” or “I won the game.”. If “I won the game.”is chosen, the script will go back to “I slept.”“I played football.” or “I played cards.” while if “I got injured.” is displayed, the next line will be surely “I was hospitalized.”.

Script Code
    The script code is a scripting language code which can store values and provide interactions. They are given in script files as code blocks with the format ${(some code)} or $${(some code)}. Double dolar signs code will have the return value discarded. Single dolar sign code will have the return value inserted into the string. For example:

$${number=15}
Number is ${number}.
$${number+=1}
The new number is ${number}.

    This will display first "Number is 15." and then "The new number is 16".

    Functions that can be called in the script:

C-like operators.$${n=5,n*=4,n==5?1:0}
Jump n lines forward, minus for backward.$${jmp(n)}
Jumpto the n-th line.$${jmpto(n)}
A random integer from 0 to n-1.$${random(n)}
Metronome, with a period of n millisecond.$${metronome(1000)}
Check whether n is defined.$${ifdef("n")}
Provide the player with "choice 1" and "choice 2", and store the result as the variable n.$${ask("n", "choice 1", 1, "choice 2", 2)}

Topic
    Media and script files are categoried into difference topics. Media files have their filenames prefixed with the topic name and the script file suffixed. For example, for the topic “star”, the media file names should be “star_xxx”“star_yyy”“star_yyy_00”. The script file of a topic is given as “script_star.txt”. An additional topic is the default topic, with non-prefixed media files and a “script.txt”.
    By default, only the default topic medias and lines will be displayed. If a line in the script file contains “=>”, it is interpreted as a script topic change command. For example:

I wanna go to Beta Centauri.=>star

    If this line is triggered, after displaying “I wanna go to Beta Centauri.”, the App will try to find and execute “script_star.txt”. Media topics are accessed by:

Images. $${media(1,"sometopic")}
Audios and videos. $${media(2,"sometopic")}

Include
    There may be good reasons to not gather a lot of media files in one folder. An “include.txt” can help to access media files in other directories. Each line of this file should be a path to a directory that will be searched for media files. If a line starts with an angle bracket, media found in this path will be put into the topic in the bracket disregard of their file names. An example “include.txt” file:

dir1/dir2
dir3
&lt;ok&gt;dir3/dir4
&lt;ready&gt;dir3/dir5
    "
    </string>
</resources>
