<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/button_help"
        style="?metaButtonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/draw_question"
        android:contentDescription="@string/tv_game_help"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textColor="@color/Phlox"
            android:text="@string/app_name"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:text="@string/tv_select_game"/>
        <ScrollView
            android:layout_width="600dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/ll_main"/>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>