<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGame">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF">
        <TextView
            android:labelFor="@id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_option_name"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/et_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:labelFor="@id/et_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_option_dir"
                android:textColor="#FF000000"/>
            <TextView
                android:id="@+id/b_option_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_option_dir_browse"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textColor="#FF0000E0"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/cb_include"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:labelFor="@id/cb_include"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_option_auto_include"
                android:textColor="#FF000000"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_dir"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>
        <TextView
            android:labelFor="@id/et_textspeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_option_textspeed"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/et_textspeed"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>
        <TextView
            android:labelFor="@id/et_imagespeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_option_imagespeed"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/et_imagespeed"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""/>
    </LinearLayout>
</ScrollView>
